# Contrarian-Oracle

./: .env.example  .gitignore  BACKTEST_GUIDE.md  COPILOT_INSTRUCTIONS.md  LICENSE  Makefile  README.md  app.py  create_dirs.py  pyproject.toml  requirements.txt  upload.py
data/: backtest_results.csv
data/sample_transcripts/: TSLA_Q4_2025.txt
docs/: agent_prompts.md  api_setup_guide.md  architecture.md
scripts/: backtest.py
src/agents/: contrarian_skeptic.py  final_arbitrator.py  sentiment_synthesizer.py  trend_scraper.py
src/config/: prompts.py  settings.py
src/crew/: oracle_crew.py  tasks.py
src/data/: cache.py  embedder.py  fetcher.py  processor.py
src/models/: contrarian.py  market_data.py  report.py  sentiment.py
src/rag/: document_loader.py  retriever.py  vector_store.py
src/scoring/: divergence_calculator.py  weights.py
src/tools/: macro_data_tool.py  news_search_tool.py  rag_query_tool.py  sec_edgar_tool.py  technical_indicators.py  yfinance_tool.py
src/utils/: cache_manager.py  token_tracker.py
tests/: conftest.py
tests/test_agents/: test_agent_outputs.py
tests/test_scoring/: test_divergence.py
tests/test_tools/: test_news_search.py  test_sec_edgar.py  test_yfinance_tool.py
ui/: agent_stream.py  charts.py  report_view.py  sidebar.py  styles.py
