[project]
name = "contrarian-oracle"
version = "1.0.0"
description = "An Autonomous Multi-Agent OSINT System for Financial Narrative Deconstruction"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
